--- a/autumn-nacos/src/main/resources/application.properties
+++ b/autumn-nacos/src/main/resources/application.properties
@@ -9,3 +9,7 @@ nacos.config.server-addr=81.69.227.238:8848
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+# rabbitmqctl add_user admin admin
+#rabbitmqctl set_user_tags admin administrator
+#rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
