--- a/autumn-nacos/src/main/resources/application.yml
+++ b/autumn-nacos/src/main/resources/application.yml
@@ -13,3 +13,14 @@ spring:
 # rabbitmqctl add_user admin admin
 #rabbitmqctl set_user_tags admin administrator
 #rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
+
+
+test:
+  val: cn,cm,cx,cz
+
+test1:
+  vals:
+    - cn
+    - cm
+    - cx
+
