--- a/autumn/pom.xml
+++ b/autumn/pom.xml
@@ -163,6 +163,12 @@
             <artifactId>protostuff-core</artifactId>
             <version>1.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
